--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,9 @@ import Container from './Container.astro';
 <footer>
   <Section>
     <Container>
-      <!-- <p class="text-center">
+      <p class="text-center">
         &copy; <a href="https://spacejelly.dev">Space Jelly</a>, {new Date().getFullYear()}
-      </p> -->
+      </p>
     </Container>
   </Section>
 </footer>
