--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -77,6 +77,8 @@ import { Icon } from 'astro-icon';
     justify-content: center;
 
     svg {
+      width: 1.2em;
+      height: auto;
       font-size: 1.2em;
       margin-right: 0.4em;
     }
