--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,102 @@
----
-import Section from './Section.astro';
-import Container from './Container.astro';
----
-<footer>
-  <Section>
-    <Container>
-      <p class="text-center">
+<footer class="footer">
+  <div class="footerSection">
+    <div class="footerContainer">
+      <p>
         &copy; <a href="https://spacejelly.dev">Space Jelly</a>, {new Date().getFullYear()}
       </p>
-    </Container>
-  </Section>
+    </div>
+  </div>
 </footer>
+
+<style lang="scss">
+.footer {
+
+  width: 100%;
+  color: black;
+  padding: 1.2em 0;
+
+  a {
+    color: blue;
+  }
+
+  p {
+
+    font-size: .9em;
+    margin: 0 0 .5em;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+  }
+}
+
+.footerSection {
+  padding: 0;
+  margin: .5em 0;
+}
+
+.footerContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1024px;
+  padding: 0 2em;
+  margin: 0 auto;
+  margin-bottom: 0.4em;
+
+  @media (max-width: 720px) {
+    flex-wrap: wrap;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.footerLinks {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0 2em;
+
+  @media (max-width: 720px) {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+  }
+
+  li {
+    margin: 0 0.8em;
+
+    &:first-child {
+      margin-left: 0;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+    svg {
+      margin-right: 0.4em;
+    }
+  }
+}
+
+.footerLegal {
+  a {
+    text-decoration: underline;
+  }
+}
+
+</style>
